--- a/GEOVIZ-Viewer/package.json
+++ b/GEOVIZ-Viewer/package.json
@@ -15,6 +15,7 @@
     "bootstrap-vue": "^0.18.0",
     "d3": "^4.10.0",
     "d3-geo": "^1.6.4",
+    "d3-geo-projection": "^2.2.0",
     "es6-promise": "^4.1.1",
     "lodash": "^4.17.4",
     "topojson": "^3.0.0",
