--- a/GEOVIZ-Viewer/.eslintrc
+++ b/GEOVIZ-Viewer/.eslintrc
@@ -1,6 +1,9 @@
 {
-  "extends": "standard",
   "plugins": [
-    "html"
+    "vue"
+  ],
+  "extends": [
+    "eslint:recommended",
+    "plugin:vue/recommended"
   ]
 }
