--- a/GEOVIZ-Viewer/package.json
+++ b/GEOVIZ-Viewer/package.json
@@ -18,6 +18,7 @@
     "d3-geo-projection": "^2.2.0",
     "es6-promise": "^4.1.1",
     "lodash": "^4.17.4",
+    "pixi.js": "^4.5.4",
     "topojson": "^3.0.0",
     "vue": "^2.4.2",
     "vue-router": "^2.7.0"
