--- a/GEOVIZ-Viewer/package.json
+++ b/GEOVIZ-Viewer/package.json
@@ -19,6 +19,7 @@
     "es6-promise": "^4.1.1",
     "lodash": "^4.17.4",
     "pixi.js": "^4.5.4",
+    "stats.js": "^0.17.0",
     "topojson": "^3.0.0",
     "vue": "^2.4.2",
     "vue-router": "^2.7.0"
