--- a/GEOVIZ-Viewer/package.json
+++ b/GEOVIZ-Viewer/package.json
@@ -22,7 +22,8 @@
     "stats.js": "^0.17.0",
     "topojson": "^3.0.0",
     "vue": "^2.4.2",
-    "vue-router": "^2.7.0"
+    "vue-router": "^2.7.0",
+    "vue-worker": "^1.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
