Install bowser for browser detection and add a welcome & recommendation for non-chrome and|or non desktop user

--- a/GEOVIZ-Viewer/package.json
+++ b/GEOVIZ-Viewer/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "bluebird": "^3.5.0",
+    "bowser": "^1.7.2",
     "d3": "^4.10.0",
     "d3-geo": "^1.6.4",
     "d3-geo-projection": "^2.2.0",
