--- a/GEOVIZ-Viewer/package.json
+++ b/GEOVIZ-Viewer/package.json
@@ -18,6 +18,8 @@
     "d3-geo-projection": "^2.2.0",
     "element-ui": "^1.4.2",
     "es6-promise": "^4.1.1",
+    "intro.js": "^2.7.0",
+    "js-cookie": "^2.1.4",
     "lodash": "^4.17.4",
     "pixi.js": "^4.5.4",
     "stats.js": "^0.17.0",
